kustomize/policy1/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: gitops-demo
  namespace: gitops-demo
  labels:
    app: gitops-demo
spec:
  port:
    targetPort: https
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: passthrough
  to:
    kind: Service
    name: gitops-demo
